--- a/slides/intro_all.Rmd
+++ b/slides/intro_all.Rmd
@@ -49,7 +49,7 @@ class: inverse
 
 # Introduction to Reproducibility in R
 
-## Emma Rand 
+### Emma Rand 
 
 ### University of York: 2020-03-19
 
@@ -271,7 +271,7 @@ There may be more than one potential tidy structure.
 # Organisation of data within files
 
 ```{r echo=FALSE}
-pigeon2 <- read.table("../data/pigeon2.txt", header = T)
+pigeon <- read.table("../data/pigeon.txt", header = T)
 ```
 
 ## Tidy format
@@ -281,12 +281,12 @@ Suppose we had just 3 individuals in each of two populations:
 .pull-left[
 ## NOT TIDY!
 ```{r echo=FALSE}
-knitr::kable(pigeon2[1:3,], 
+knitr::kable(pigeon[1:3,], 
              format = "html")
 ```
 ]
 ```{r echo=FALSE}
-pigeon3 <- gather(data = pigeon2, 
+pigeon2 <- gather(data = pigeon, 
                   key = population, 
                   value = distance)
 ```
@@ -295,7 +295,7 @@ pigeon3 <- gather(data = pigeon2,
 
 ## TIDY!
 ```{r echo=FALSE}
-knitr::kable(head(pigeon3[c(1:3,41:43),]), 
+knitr::kable(head(pigeon2[c(1:3,41:43),]), 
              format = "html",
              row.names = FALSE)
 ```
