--- a/index.Rmd
+++ b/index.Rmd
@@ -32,7 +32,7 @@ options(htmltools.dir.version = FALSE)
 [For those without experience in R](slides/no_experience_intro.html) 
 ]
 .pull-right[
-[For those with experience in R]()  
+[For those with experience in R](slides/experience_intro.html)  
 
 ]
 
