--- a/slides/intro_all.Rmd
+++ b/slides/intro_all.Rmd
@@ -110,8 +110,9 @@ Made with xaringan `r Cite(myBib, "xaringan")`
 ]
 .pull-right[
 [For those with experience in R]()  
-* Advanced data import  
+* RStudio projects and writing files.  
 * Advanced data tidying  
+* Advanced data import  
 
 ]
 ## 1115 Coffee in the Atrium  
@@ -134,7 +135,6 @@ Made with xaringan `r Cite(myBib, "xaringan")`
 
 ## 1315 R Markdown for Reproducible Reports  
 [R Markdown fundamentals]()  
-* Project based approach    
 * ...  
 * ...  
 ---
