--- a/slides/experience_rs_projects.Rmd
+++ b/slides/experience_rs_projects.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "An Introduction to Reproducible Analyses in R: With previous experience."
+title: "An Introduction to Reproducible Analyses in R: RStudio Projects."
 subtitle: "White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology"
 author: "Emma Rand"
 institute: "University of York, UK"
@@ -64,7 +64,7 @@ Made with xaringan `r Cite(myBib, "xaringan")`
 
 ## Aims
 
-The aim of this section is to show you how to organise your work in a logical, consistent and reproducible way using RStudio Projects, appropriate directory structures and portable code. It will set you up for the [Tidying data and the tidyverse including the pipe]() and [Advanced Data Import]() sections.
+The aim of this section is to show you how to organise your work in a logical, consistent and reproducible way using RStudio Projects, appropriate directory structures and portable code. It will set you up for the [Tidying data and the tidyverse including the pipe](experience_data_tidying.Rmd) and [Advanced Data Import]() sections.
 
 ## Learning outcomes 
 
@@ -263,9 +263,6 @@ PrintBibliography(myBib)
 
 
 ---
-background-image: url(pics/Royal_Society_of_Biology.png)
-background-position: 0.5% 0.5%
-background-size: 350px
 
 class: inverse
 
