--- a/refs.bib
+++ b/refs.bib
@@ -345,3 +345,10 @@
   language = "en"
 }
 
+ @Manual{Dowle_Srinivasan_2019,
+    title = {data.table: Extension of `data.frame`},
+    author = {Matt Dowle and Arun Srinivasan},
+    year = {2019},
+    note = {R package version 1.12.6},
+    url = {https://CRAN.R-project.org/package=data.table},
+  }
