--- a/refs.bib
+++ b/refs.bib
@@ -352,3 +352,18 @@
     note = {R package version 1.12.6},
     url = {https://CRAN.R-project.org/package=data.table},
   }
+  
+  @Manual{readxl,
+    title = {readxl: Read Excel Files},
+    author = {Hadley Wickham and Jennifer Bryan},
+    year = {2019},
+    note = {R package version 1.3.1},
+    url = {https://CRAN.R-project.org/package=readxl},
+  }
+  @Manual{rvest,
+    title = {rvest: Easily Harvest (Scrape) Web Pages},
+    author = {Hadley Wickham},
+    year = {2019},
+    note = {R package version 0.3.5},
+    url = {https://CRAN.R-project.org/package=rvest},
+  }
