--- a/slides/experience_data_import.Rmd
+++ b/slides/experience_data_import.Rmd
@@ -95,7 +95,7 @@ There are four main considerations for data import:
 
 --
 
-4. What data structure will be created in R? Often this will be dataframes or dataframe-like structures (eg., tibbles) but there are many specialised data struction often specialised data structures.
+4. What data structure will be created in R? Often this will be dataframes or dataframe-like structures (eg., tibbles) but there are many specialised data structures often specialised data structures.
 
 ---
 # Locally stored text files
@@ -105,9 +105,21 @@ There are four main considerations for data import:
 This section may be familiar and you may want to skip ahead.
 
 * Plain text files can be opened in notepad or other text editor and make sense (contrast with for examples xlsx, doc, sav, png)  
+
+--
+
 * Columns usually 'delimited' by a particular character (but fixed width does occur).  
+
+--
+
 * Can be read in with the base packages `read.table()` methods.  
-* Or with the `readr` package methods such as `read.table()`, `read_csv()`, `read_delim()` which is ususally my preference because they are a little faster and output tibbles.  
+
+--
+
+* Or with the `readr` package methods such as `read.table()`, `read_csv()`, `read_delim()` which is usually my preference because they are a little faster and output tibbles.  
+
+--
+
 * Or with the even faster `fread()` from the `data.table` package `r Cite(myBib, "Dowle_Srinivasan_2019") `.  
 
 ---
@@ -117,16 +129,35 @@ This section may be familiar and you may want to skip ahead.
 
 Data file: [structurepred.txt](raw_data/structurepred.txt)
 
-These data are root mean square deviations (RMSD) in $\unicode{x212B}$ngstrom ($\unicode{x212B}$) between predicted and actual protein structures. Three programs were used to make predictions for 30 proteins.
+These data are root mean square deviations (RMSD) in $\unicode{x212B}$ngstrom ( $\unicode{x212B}$ ) between predicted and actual protein structures. Three programs were used to make predictions for 30 proteins.
+
+--
 
 `r emo::ji("clapper")` Save a copy of the file to your `raw_data` folder and read it in with:
 ```{r}
 file <- "raw_data/structurepred.txt"
-mydata <- read_table(file)
-glimpse(mydata)
+protein_struc <- read_table(file)
+
 ```
 
-`r emo::ji("unhappy")`The command runs but the result looks wrong.
+--
+
+`r emo::ji("clapper")` Examine the result:
+```{r eval=FALSE}
+glimpse(protein_struc)
+```
+
+---
+# Locally stored text files
+
+## Exercise 1
+
+```{r echo=FALSE}
+glimpse(protein_struc)
+```
+
+
+`r emo::ji("unhappy")` The command runs but the result looks wrong. 
 
 All the variables have been read into one column.
 
@@ -136,9 +167,11 @@ All the variables have been read into one column.
 ## Exercise 1
 `r emo::ji("clapper")` Look up `read_table()` and work out how to read the three variables in to three columns.
 ```{r echo = FALSE}
-mydata <- read_table2(file)
-glimpse(mydata)
+protein_struc <- read_table2(file)
+
 ```
+
+--
 
 A function that can save you having to open a text file to look or wait along time to discover an import failure is `readLines()`:
 
@@ -146,33 +179,46 @@ A function that can save you having to open a text file to look or wait along ti
 readLines(file, n = 5)
 ```
 
-Reading in the first few (5) lines would help you identify that each line is not the same length.
+---
+# Locally stored text files
+
+## Exercise 1
+
+The helps you identify that each line is not the same length (i.e., it is not a fixed width file) which is one of the requirements of `read_table()`.
 
 --
 
-`readLines()` is useful when the file is very big and takes ages to open or import.
+`read_table2()` is the function you needed.
+
+--
+
+`readLines()` is especially useful when the file is very big and takes ages to open or import.
 
 ---
 # Locally stored text files
 
-# Exercise 2
+## Exercise 2
 
 Data file: [Icd10Code.csv](raw_data/Icd10Code.csv)
 
 ICD-10 codes are alphanumeric codes used by doctors, health insurance companies, and public health agencies across the world to represent diagnoses. This file contains a list of the codes and diseases they represent.
 
-`r emo::ji("clapper")` Save a copy of the file to your `raw_data` folder and read it with the most appropriate `readr` function:
-```{r error = TRUE}
+--
+
+`r emo::ji("clapper")` Save a copy of the file to your `raw_data` folder and read it with the most appropriate `readr` function.
+```{r echo=FALSE}
 file <- "raw_data/Icd10Code.csv"
-mydata <- read_table2(file)
+icd <- read_table2(file)
 ```
 
 ---
 # Locally stored text files
 
-# Exercise 2
+## Exercise 2
 
-You may have quite naturally assumed that file with a .csv extension would contain comma separated values and use `read_csv()`. 
+You may have quite naturally assumed that file with a .csv extension would contain comma separated values and used `read_csv()`. 
+
+--
 
 The use of `readLines()` reveals it is actually tab separated.
 ```{r}
@@ -180,6 +226,263 @@ readLines(file, n = 2)
 ```
 
 It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin `r emo::ji("spy")`
+
+---
+# Locally stored special formats.
+
+## Overview
+
+* Cannot usually be opened in notepad.  
+
+--
+
+* Often specific to proprietary software, e.g., SPSS, STATA, Matlab.  
+
+--
+
+* If you have that software you may be able to export in plain text format.  
+
+--
+
+* But usually there is a package or function that allows you to script the steps. Favourites of mine are:  
+  * `haven` `r Cite(myBib, "haven")` for importing and exporting SPSS, STATA and SAS files  
+  * `readxl` `r Cite(myBib, "readxl")`for excel files  
+
+--
+
+* Google is your friend.  
+
+---
+# Locally stored special formats.
+
+## SPSS example using `haven`
+
+Data file: [periwinkle.sav](raw_data/periwinkle.sav).
+
+These data give a measure of the gut parasite load in two species of rough periwinkle in the Spring and Summer.
+
+`r emo::ji("clapper")` Save a copy of the file to your `raw_data` folder and read it with:
+```{r}
+library(haven)
+file <- "raw_data/periwinkle.sav"
+periwinkle <- read_sav(file)
+```
+---
+# Locally stored special formats.
+
+## SPSS example using `haven`
+
+.scroll-output-height[
+`r emo::ji("clapper")` Examine the result.
+```{r}
+
+str(periwinkle)
+```
+]
+
+---
+# Locally stored special formats.
+
+## SPSS example using `haven`
+
+The SPSS variables `season` and `species` are labelled integers, i.e., the actual values are integers, which is a common data structure in other statistical environments.
+
+`read_sav()` has made them variables of type "haven_labelled". 
+
+--
+
+The labels of these can be viewed in R using:
+```{r}
+attr(periwinkle$season, "labels")
+attr(periwinkle$species, "labels")
+```
+
+---
+# Locally stored special formats.
+
+## SPSS example using `haven`
+
+`r emo::ji("clapper")` Turn the variables of type "haven_labelled" in to factors with:
+
+```{r}
+periwinkle <- periwinkle %>% 
+  mutate(season = as_factor(season),
+         species = as_factor(species))
+```
+
+--
+
+`r emo::ji("clapper")` Write the dataframe to a plain text format file in your `processed_data` folder.
+```{r echo=FALSE}
+write.table(periwinkle, "processed_data/periwinkle.txt")
+```
+
+--
+
+`r emo::ji("eyes")` There are `read_dta()` and `read_sas()` functions for STATA and SAS files respectively.
+
+---
+# Files on the internet
+
+## Overview
+
+It may be preferable to read data files from the internet rather than download the file if the data are likely to be updated.
+
+--
+
+We simply use the URL rather than the local file path. Your options for import functions and arguments are the same as for local files.
+
+For example, these data are from a buoy (buoy #44025) off the coast of New Jersey at
+http://www.ndbc.noaa.gov/view_text_file.php?filename=44025h2011.txt.gz&dir=data/historical/stdmet/
+
+--
+
+`r emo::ji("clapper")` Use `readLines()` to examine the data format.
+```{r include=FALSE}
+file <- "http://www.ndbc.noaa.gov/view_text_file.php?filename=44025h2011.txt.gz&dir=data/historical/stdmet/"
+
+# use readLines() data format: 
+readLines(file, n = 4)
+```
+
+--
+
+The first line gives the column name, the second line gives units and the data themselves begin on line 3
+
+---
+# Files on the internet
+
+`r emo::ji("clapper")` Read in the data.
+```{r echo=FALSE}
+buoy44025 <- read_table(file, col_names = FALSE, skip = 2)
+
+```
+
+--
+
+`r emo::ji("clapper")` Use `scan()` to read in the appropriate lines then [tidy](experience_data_tidying.html) the results and name the columns measure_units, for example
+```{r echo=FALSE}
+# read in the variable names from the first line, removing the hash
+measure <- scan(file, nlines = 1, what = character()) %>%
+  str_remove("#")
+# read in the units from the second line, removing the hash and
+# replacing the / with _per_ as / is a special character
+units <- scan(file, skip = 1, nlines = 1, what = character()) %>% 
+  str_remove("#") %>% 
+  str_replace("/", "_per_")
+# paste the variable name and its units together for the column names
+names(buoy44025) <- paste(measure, units, sep = "_") 
+
+```
+---
+# Web scraping
+
+## Overview
+
+What if data are not in a file but on web page? One solution is to  'scrape' the data using package `rvest` `r Cite(myBib, "rvest")`.
+
+Do you see what they did there? `r emo::ji("joke")`
+
+--
+
+This is possible because the two core standards for building web pages, HTML (Hypertext Markup Language) and CSS (Cascading Style Sheets) are just text files which describe the structure of a page and its appearance.
+
+--
+
+HTML describes the structure of pages using markup: pieces of content are labelled such as “paragraph,” “list,” “table,” and so on.
+
+We will do just one small example of a big topic: getting the information from a Wikipedia page on [Global biodiversity](https://en.wikipedia.org/wiki/Global_biodiversity)
+
+---
+# Web scraping
+
+## Process
+
+There are several steps
+
+1. download and parse the html file using `read_html`  
+
+--
+
+2. determine which css selector marks the data in the page you want  
+
+--
+
+3. find that selector in the parsed html and extract the text using `html_nodes()`.  
+
+--
+
+4. process the text in to an R data structure for example using `html_table()` or `html_text()`.  
+
+--
+
+5. Do any any additional processing to the data in the R object.  
+
+--
+
+`r emo::ji("clapper")` Go to the web page: https://en.wikipedia.org/wiki/Global_biodiversity 
+
+---
+# Web scraping
+
+## Process
+
+`r emo::ji("clapper")` Load the `rvest` package and assign the web address to a variable:
+```{r}
+library(rvest)
+url <- "https://en.wikipedia.org/wiki/Global_biodiversity"
+```
+
+--
+
+`r emo::ji("clapper")` Scroll down the Global biodiversity page until you see the table. Right click on the page and choose Inspect.
+
+A box will appear on the right including the full page source. 
+
+--
+
+`r emo::ji("clapper")` In the Elements window, click on the element that highlights the information you want - in this case `<table class="wikitable">`
+
+`r emo::ji("clapper")` Right click on that element and choose Copy | Copy selector.
+
+---
+# Web scraping
+
+## Process
+
+`r emo::ji("clapper")` Now download and parse the html file using `read_html`, extract the text at the copied selector using `html_nodes()`, process the text in to a list using `html_table()` and get the dataframe which is the first(and only) element of that list:
+
+```{r}
+test <- read_html(url) %>%
+  html_nodes(css = '#mw-content-text > div > table') %>%
+  html_table() %>% 
+  .[[1]]
+```
+
+--
+
+`r emo::ji("clapper")` Examine the resulting dataframe. 
+
+--
+
+`r emo::ji("clapper")` Use methods given in [Tidying data and the tidyverse including the pipe]("experience_data_tidying.html") to process the contents of the dataframe.
+```{r echo=FALSE}
+
+```
+
+---
+# Reading multiple files
+
+## loops
+
+## readxl sheets
+
+---
+# APIs
+
+## jasonlite
+
+## packages
 
 
 ---
