--- a/slides/01_intro_and_principles_of_repro.Rmd
+++ b/slides/01_intro_and_principles_of_repro.Rmd
@@ -3,7 +3,6 @@ title: "Introduction and Principles of reproducibility."
 subtitle: "White Rose BBSRC DTP Training: An Introduction to Reproducible Analyses in R."
 author: "Emma Rand"
 institute: "University of York, UK"
-
 output:
   xaringan::moon_reader:
     css: [default, ../css_files/emma.css, ../css_files/emma-fonts.css]
@@ -79,45 +78,47 @@ myBib <- ReadBib("../refs.bib", check = FALSE)
 
 This programme comprises several modules lasting from 30 minutes to 2 hours. The selection of modules you undertake will depend on your previous experience.
 
-1. [Introduction and Principles of reproducibility](slides/01_intro_and_principles_of_repro.html)  
-   Expected audience: Everyone
-   * Rationale for scripting
-   * Why R?
-   * Organisation of data  
-   * Organisation of analyses
+[1. Introduction and Principles of reproducibility](slides/01_intro_and_principles_of_repro.html)  
+Expected audience: Everyone
+* Rationale for scripting  
+* Why R?  
+* Organisation of data  
+* Organisation of analyses  
 
-2. [Introduction to R and working with data](slides/02_intro_to_r_and_working_with_data.html)  
-   Expected audience: Those without previous experience
-   * Finding your way round RStudio  
-   * Typing in data, doing some calculations on it, plotting it  
-   * Understanding the manual  
-   * Importing data: working directories and paths  
-   * Summarising and visualising with the [`tidyverse`](https://www.tidyverse.org/)  
-   * Installing and loading packages
-
+[2. Introduction to R and working with data](slides/02_intro_to_r_and_working_with_data.html)  
+Expected audience: Those without previous experience
+* Finding your way round RStudio  
+* Typing in data, doing some calculations on it, plotting it  
+* Understanding the manual  
+* Importing data: working directories and paths  
+* Summarising and visualising with the [`tidyverse`](https://www.tidyverse.org/)  
+* Installing and loading packages  
 ---
 # Programme overview - continued
+[3. RStudio Projects](slides/03_rstudio_projects.html)  
+Expected audience: Everyone
+* Organising your work in a logical, consistent and reproducible way using RStudio Projects  
+* Writing code with relative paths given appropriate to your project organisation  
+* Writing dataframes and figures to file  
 
-
-3. [RStudio Projects](slides/03_rstudio_projects.html)  
-    Expected audience: Everyone
-
-
-
-4. [Tidying data and the tidyverse including the pipe](slides/04_tidying_data_and_the_tidyverse.html)  
-   Expected audience: For those with previous experience of R but little of 'tidy data' and the tidyverse, such as having done "Introduction to R and working with data."
-   * 
-
+[4. Tidying data and the tidyverse including the pipe](slides/04_tidying_data_and_the_tidyverse.html)  
+Expected audience: For those with previous experience of R but little of 'tidy data' and the tidyverse, such as having done "Introduction to R and working with data."
+* Using the tidyverse including the pipe to link operations together.  
+* Carrying out some common data tidying tasks such as reshaping, renaming and recoding variable and cleaning cell contents  
 ---
 # Programme overview - continued   
-5. [Advanced data import](slides/05_advanced_data_import.html)  
-   Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data" and "Tidying data and the tidyverse including the pipe."
-   * 
-   
-6. [R Markdown for Reproducible Reports](slides/)  
-   Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data"
-   * 
-.
+[5. Advanced data import](slides/05_advanced_data_import.html)  
+Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data" and "Tidying data and the tidyverse including the pipe."
+* Understanding what matters in data import  
+* Importing plain text and proprietary data formats stored locally and on the web  
+* Carrying out some simple web scraping  
+* Packages available for importing publicly accessible data from APIs  
+
+[6. R Markdown for Reproducible Reports](slides/)  
+Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data."
+* Making more advanced figures  
+* Creating reproducible reports in a variety of output formats.  
+
 ---
 background-image: url(../pics/rationale1.png)
 background-position: 50% 35%
@@ -232,7 +233,7 @@ Tidy data adhere to a consistent structure which makes it easier to manipulate, 
 3. Each value has its own cell.  
 
 Closely allied to the relational algebra of relational databases `r Cite(myBib, "Codd1990-th")`.  
-Underlies the enforced rectangular formating in SPSS, STATA and R's dataframe.  
+Underlies the enforced rectangular formatting in SPSS, STATA and R's dataframe.  
 The term 'tidy data' was popularised by `r Citet(myBib, "Wickham2014-nl")`.   
 There may be more than one potential tidy structure.  
 
@@ -289,7 +290,7 @@ knitr::kable(head(pigeon2[c(1:3,41:43),]),
 
 * structured  
 * systematic  
-* repeatible  
+* repeatable  
 
 ### Naming
 
