--- a/slides/04_tidying_data_and_the_tidyverse.Rmd
+++ b/slides/04_tidying_data_and_the_tidyverse.Rmd
@@ -1,9 +1,8 @@
 ---
-title: "An Introduction to Reproducible Analyses in R: Tidying data and the tidyverse including the pipe."
-subtitle: "White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology"
+title: "Tidying data and the tidyverse including the pipe."
+subtitle: "White Rose BBSRC DTP Training: An Introduction to Reproducible Analyses in R."
 author: "Emma Rand"
 institute: "University of York, UK"
-date: "2020-19-03"
 output:
   xaringan::moon_reader:
     css: [default, ../css_files/emma.css, ../css_files/emma-fonts.css]
@@ -70,6 +69,7 @@ The aim of this section is to introduce you to the tidyverse `r Cite(myBib, "Wic
 
 The successful student will be able to:
 
+* use the tidyverse
 * use pipes to link operations together.  
 * carry out some common data tidying tasks - specify!
  
